Adding four divs and having them be all droppable

--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
   <link rel="stylesheet" href="/resources/demos/style.css">
   <style>
   #draggable { width: 100px; height: 100px; padding: 0.5em; float: left; margin: 10px 10px 10px 0; background-color: blue;}
-  #droppable { width: 150px; height: 150px; padding: 0.5em; float: left; margin: 10px; background-color:orange;}
+  .droppable { width: 450px; height: 150px; padding: 0.5em; float: left; margin: 10px; background-color:orange;}
   </style>
   <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
   <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
   <script>
   $( function() {
     $( "#draggable" ).draggable();
-    $( "#droppable" ).droppable({
+    $( ".droppable" ).droppable({
       drop: function( event, ui ) {
         $( this )
           .addClass( "ui-state-highlight" )
@@ -29,14 +29,23 @@
 <body>
 <!-- from https://jqueryui.com/droppable/#default -->
  
+
+<div id="droppable1" class="droppable ui-widget-header">
+  <p>Drop here</p>
+</div>
+<div id="droppable2" class="droppable ui-widget-header">
+  <p>Drop here</p>
+</div>
+<div id="droppable3" class="droppable ui-widget-header">
+  <p>Drop here</p>
+</div>
+<div id="droppable4" class="droppable ui-widget-header">
+  <p>Drop here</p>
+</div>
+  
 <div id="draggable" class="ui-widget-content">
   <p>Drag me to my target</p>
 </div>
- 
-<div id="droppable" class="ui-widget-header">
-  <p>Drop here</p>
-</div>
- 
- 
+  
 </body>
 </html>
