--- a/index.html
+++ b/index.html
@@ -7,45 +7,46 @@
   <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
   <link rel="stylesheet" href="/resources/demos/style.css">
   <style>
-  #draggable { width: 100px; height: 100px; padding: 0.5em; float: left; margin: 10px 10px 10px 0; background-color: blue;}
+  .draggable { width: 150px; height: 40px; padding: 0.5em; font-size: 12px; float: left; margin: 10px 10px 10px 0; background-color: blue;}
   .droppable { width: 450px; height: 150px; padding: 0.5em; float: left; margin: 10px; background-color:orange;}
   </style>
   <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
   <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
   <script>
-  $( function() {
-    $( "#draggable" ).draggable();
-    $( ".droppable" ).droppable({
-      drop: function( event, ui ) {
-        $( this )
-          .addClass( "ui-state-highlight" )
-          .find( "p" )
-            .html( "Dropped!" );
-      }
-    });
+
+    $(document).ready(function(){
+
+
+        all_divs = ['urgent,not important','urgent and important','not urgent,not important','not urgent, important'];
+        for (var i = 0, len = all_divs.length; i < len; i++) {
+            name= all_divs[i];
+            new_div = '<div id="droppable'+name+'" class="droppable ui-widget-header"> <p>Drop here - '+name+'</p> </div>';
+
+            $(document.body).append(new_div);
+        }
+
+
+
+        $( ".draggable" ).draggable();
+        $( ".droppable" ).droppable({
+          drop: function( event, ui ) {
+            $( this )
+              .addClass( "ui-state-highlight" )
+              .find( "p" )
+                .html( "Dropped!" );
+          }
+        });
   } );
   </script>
 </head>
 <body>
 <!-- from https://jqueryui.com/droppable/#default -->
  
-
-<div id="droppable1" class="droppable ui-widget-header">
-  <p>Drop here</p>
-</div>
-<div id="droppable2" class="droppable ui-widget-header">
-  <p>Drop here</p>
-</div>
-<div id="droppable3" class="droppable ui-widget-header">
-  <p>Drop here</p>
-</div>
-<div id="droppable4" class="droppable ui-widget-header">
-  <p>Drop here</p>
-</div>
   
-<div id="draggable" class="ui-widget-content">
-  <p>Drag me to my target</p>
-</div>
-  
+<div  class="draggable ui-widget-content"> <p>T#XYZ - create YuGene for person X</p> </div>
+<div  class="draggable ui-widget-content"> <p>T#XYZ - create GEG troubleshoot for person X</p> </div>
+<div  class="draggable ui-widget-content"> <p>T#XYZ - create scPipe conda package for person X</p> </div>
+<div style="clear:both"></div>
+ 
 </body>
 </html>
