--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>jQuery UI Droppable - Default functionality</title>
   <style>
-  .draggable { width: 150px; height: 40px; padding: 0.5em; font-size: 12px; float: left; margin: 10px 10px 10px 0; background-color: blue;}
+  .draggable { width: 350px;  padding: 0.1em; font-size: 12px;  background-color: grey;}
   .droppable { width: 450px; height: 150px; padding: 0.5em; float: left; margin: 10px; background-color:orange;}
   </style>
   <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
@@ -18,31 +18,60 @@
         all_divs = ['urgent,not important','urgent and important','not urgent,not important','not urgent, important'];
         for (var i = 0, len = all_divs.length; i < len; i++) {
             name= all_divs[i];
-            new_div = '<div id="droppable'+name+'" class="droppable ui-widget-header"> <p>Drop here - '+name+'</p> </div>';
+            new_div = '<div id="droppable'+name+'" class="droppable ui-widget-header"> <p>Drop here - '+name+'</p><ul></ul> </div>';
 
             $(document.body).append(new_div);
         }
 
         $(document.body).append('<div style="clear:both"></div>');
 
-        all_tasks = ['T#12131 - create YuGene for Jason','T#34224332 - create GEG troubleshoot','T#23141423 - create scPipe on Raijin'];
+        temp= new Object();
+        temp.name = 'Create YuGene for Jason';
+        temp.id = 12131;
+        temp.urgency = 2;
+        temp.importance = 2;
+        all_tasks = new Array();
+        all_tasks.push(temp);
+
+        temp= new Object();
+        temp.name = 'Setup scPipe on Raijin';
+        temp.id = 12134;
+        temp.urgency = 1;
+        temp.importance = 1;
+        all_tasks.push(temp);
+
+        temp= new Object();
+        temp.name = 'Troubleshoot GEG';
+        temp.id = 12135;
+        temp.urgency = 1;
+        temp.importance = 1;
+        all_tasks.push(temp);
+
+        $(document.body).append('<ul id="initial_list"></ul>');
 
         for (var i = 0, len = all_tasks.length; i < len; i++) {
-            name= all_tasks[i];
-            new_div = '<div id="draggable'+i+'" class="draggable"> <p>Drag here - '+name+'</p> </div>';
+            name= all_tasks[i].name;
+            id= all_tasks[i].id;
+            new_li = '<li id="draggable'+id+'" class="draggable">'+name+'</li>';
 
-            $(document.body).append(new_div);
+            $('#initial_list').append(new_li);
         }
 
 
         $( ".draggable" ).draggable();
         $( ".droppable" ).droppable({
           drop: function( event, ui ) {
-            alert(ui.draggable.attr('id') + ui.draggable.html() + ' on ' + $(this).html());
+
+            id = ui.draggable.attr('id');
+            name = ui.draggable.html() ;
+
+            new_li = '<li id="draggable'+id+'" class="draggable">'+name+'</li>';
+
             $( this )
-              .addClass( "ui-state-highlight" )
-              .find( "p" )
-                .html( "Dropped!" );
+              .find( "ul" )
+                .append(new_li);
+            $( ".draggable" ).draggable();
+            ui.draggable.remove();
           }
         });
   } );
@@ -51,7 +80,6 @@
 <body>
 <!-- from https://jqueryui.com/droppable/#default -->
  
-  
  
 </body>
 </html>
