Changing order of when to delete draggable.

--- a/index.html
+++ b/index.html
@@ -105,12 +105,10 @@
             name = ui.draggable.html() ;
 
             new_li = '<li id="'+id+'" class="draggable">'+name+'</li>';
-
-            $( this )
-              .find( "ul" )
-                .append(new_li);
-            $( ".draggable" ).draggable();
             ui.draggable.remove();
+
+            $( this ).find( "ul" ).append(new_li);
+            $( ".draggable" ).draggable();
           }
         });
   } );
