--- a/index.html
+++ b/index.html
@@ -47,10 +47,17 @@
 
     function setup_droppable_boxes(urgent_levels,important_levels){
 
+        levels = new Array(); 
+        levels[0] = 'Undefined';
+        levels[1] = 'Low';
+        levels[2] = 'High';
+        levels[3] = 'Very High';
+
+
         for (var counter_urgent = urgent_levels, len = 0; counter_urgent > len; counter_urgent--) {
             for (var counter_importance = 0, len_important = important_levels; counter_importance < len_important; counter_importance++) {
-                name= 'Drop here - Urgent:' + (counter_urgent) + ' Importance:' + (counter_importance+1);
-                new_div = '<div data-urgent-important="'+counter_urgent+'::'+(counter_importance+1)+'" id="droppable'+name+'" class="droppable ui-widget-header"> <p>Drop here - '+name+'</p><ul></ul> </div>';
+                name= 'Urgent:' + levels[counter_urgent] + ' Importance:' + levels[(counter_importance+1)];
+                new_div = '<div data-urgent-important="'+counter_urgent+'::'+(counter_importance+1)+'" id="droppable'+name+'" class="droppable ui-widget-header"> <p>'+name+'</p><ul></ul> </div>';
                 
                 $(document.body).append(new_div);
             }
