--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         json_export = JSON.stringify(json_export_array);
 
 
-        alert(json_export);
+        $('#final_json').val(json_export);
 
     }
 
@@ -164,11 +164,14 @@
 <body>
 <!-- from https://jqueryui.com/droppable/#default -->
 <textarea id="set_json" style="width:400px;height:200px;float:left;">
-[{"id":"2487","name":"BPA Landing Page","urgency":"3","importance":"1"},{"id":"2767","name":"scPipe on Raijin","urgency":"3","importance":"1"},{"id":"2773","name":"Make \"Set Front End\" and \"Troubleshoot GEG\" faster","urgency":"3","importance":"1"},{"id":"2736","name":"Setup Voom/Glimma S4M module","urgency":"3","importance":"1"},{"id":"2753","name":"PCA plots integrated","urgency":"3","importance":"2"},{"id":"2753","name":"Report Upload","urgency":"3","importance":"2"},{"id":"2761","name":"YuGene for Jason Ivanusic","urgency":"3","importance":"2"},{"id":"2730","name":"Omicxview UX improvements","urgency":"3","importance":"2"},{"id":"2772","name":"NCMAS application Raijin","urgency":"3","importance":"2"},{"id":"2159","name":"SSL on all servers","urgency":"3","importance":"2"},{"id":"2746","name":"scRNASeq hosting","urgency":"2","importance":"1"},{"id":"2741","name":"Store gene lists in Report","urgency":"2","importance":"1"},{"id":"2580","name":"Protein Mapping","urgency":"2","importance":"2"},{"id":2242,"name":"Ensembl Upgrade","urgency":"2","importance":"2"},{"id":2730,"name":"Omicxview with protein/transcriptomic data","urgency":"2","importance":"2"},{"id":"","name":"New species","urgency":"2","importance":"2"},{"id":"2537","name":"agile_org improvements","urgency":"1","importance":"1"},{"id":"1220","name":"Pylons to Pyramid","urgency":"1","importance":"2"},{"id":"2613","name":"PHP Validator","urgency":"1","importance":"2"}]
+[{"id":"2487","name":"BPA Landing Page","urgency":"3","importance":"1"},{"id":"2767","name":"scPipe on Raijin","urgency":"3","importance":"1"},{"id":"2773","name":"Make \"Set Front End\" and \"Troubleshoot GEG\" faster","urgency":"3","importance":"1"},{"id":"2736","name":"Setup Voom/Glimma S4M module","urgency":"3","importance":"1"},{"id":"2734","name":"Data Portal","urgency":"3","importance":"1"},{"id":"2753","name":"PCA plots integrated","urgency":"3","importance":"2"},{"id":"2753","name":"Report Upload","urgency":"3","importance":"2"},{"id":"2761","name":"YuGene for Jason Ivanusic","urgency":"3","importance":"2"},{"id":"2730","name":"Omicxview UX improvements","urgency":"3","importance":"2"},{"id":"2772","name":"NCMAS application Raijin","urgency":"3","importance":"2"},{"id":"2159","name":"SSL on all servers","urgency":"3","importance":"2"},{"id":"2746","name":"scRNASeq hosting","urgency":"2","importance":"1"},{"id":"2741","name":"Store gene lists in Report","urgency":"2","importance":"1"},{"id":"","name":"Speed up pipelines","urgency":"2","importance":"1"},{"id":"2580","name":"Protein Mapping","urgency":"2","importance":"2"},{"id":"2242","name":"Ensembl Upgrade","urgency":"2","importance":"2"},{"id":"2730","name":"Omicxview with protein/transcriptomic data","urgency":"2","importance":"2"},{"id":"","name":"New species","urgency":"2","importance":"2"},{"id":"","name":"Audit annotation changes","urgency":"2","importance":"2"},{"id":"","name":"Protein vs RNA scatter","urgency":"2","importance":"2"},{"id":"2537","name":"agile_org improvements","urgency":"1","importance":"1"},{"id":"","name":"Redo the UX including wizards","urgency":"1","importance":"1"},{"id":"","name":"Better Group Sharing Jobs, Gene Lists","urgency":"1","importance":"1"},{"id":"","name":"Omnisearch for Metabolites and miRNA","urgency":"1","importance":"1"},{"id":"1220","name":"Pylons to Pyramid","urgency":"1","importance":"2"},{"id":"2613","name":"PHP Validator","urgency":"1","importance":"2"},{"id":"2717","name":"Volcano plots integrated ","urgency":"1","importance":"2"},{"id":"2741","name":"Andras needs","urgency":"1","importance":"2"}]
 </textarea> 
 <div style="clear:both"></div>
-
 <button id="reset_json">Reset JSON </button>
+<div style="clear:both"></div>
+<textarea id="final_json" style="margin-top: 20px;width:400px;height:200px;float:left;">
+</textarea>
+<div style="clear:both"></div>
 <button id="final_report">Final Report</button>
 <div style="clear:both"></div>
 <input id="new_id" placeholder="id" type="text"></input>
