--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>jQuery UI Droppable - Default functionality</title>
   <style>
+    textarea {width:400px;height:100px;float:left}
     input, button {margin-top: 20px;margin-bottom:20px;}
     .draggable { width: 350px;  padding: 0.1em; font-size: 12px;  background-color: grey;}
     .droppable { width: 450px; height: 150px; padding: 0.5em; float: left; margin: 10px; background-color:orange;}
@@ -41,7 +42,7 @@
         json_export = JSON.stringify(json_export_array);
 
 
-        $('#final_json').val(json_export);
+        $('#set_json').val(json_export);
 
     }
 
@@ -121,6 +122,15 @@
 
     }
 
+    function clear_all(){
+        
+        $('#set_json').val('');
+        $( ".draggable" ).remove();
+        set_tasks_from_json();
+        setup_new_li_triggers();
+    }
+
+
     function setup_click_for_add_new_task(){
 
         $('#add_new_li').click(function(){
@@ -138,9 +148,26 @@
         });
     }
 
+    function bulk_create_new_lists(){
+
+        temp_text = $('#bulk_new_lists').val();
+        temp_array = temp_text.split('\n');
+
+        for (var counter = 0, len = temp_array.length; counter < len; counter++) {
+            new_name = temp_array[counter];
+            if (new_name != ''){
+                new_id = '';
+                new_li = create_new_li(new_id,new_name);
+                $('#ul_for_new_li').append(new_li);
+                
+            }
+        }
+
+        setup_new_li_triggers();
+
+    }
 
     $(document).ready(function(){
-
 
         $('#final_report').click(function(){
             run_final_report();
@@ -158,20 +185,31 @@
 
         setup_click_for_add_new_task();
 
+        $('#bulk_create_new_lists').click(function(){
+            bulk_create_new_lists();
+        });
+
+        $('#clear_all').click(function(){
+            clear_all();
+        });
+
+
   } );
   </script>
 </head>
 <body>
 <!-- from https://jqueryui.com/droppable/#default -->
-<textarea id="set_json" style="width:400px;height:200px;float:left;">
+<textarea id="bulk_new_lists" placeholder="Put tasks on different lines">
+</textarea>
+<div style="clear:both"></div>
+<button id="bulk_create_new_lists">Bulk Create New Lists</button>
+<div style="clear:both"></div>
+<textarea id="set_json">
 [{"id":"2487","name":"BPA Landing Page","urgency":"3","importance":"1"},{"id":"2767","name":"scPipe on Raijin","urgency":"3","importance":"1"},{"id":"2773","name":"Make \"Set Front End\" and \"Troubleshoot GEG\" faster","urgency":"3","importance":"1"},{"id":"2736","name":"Setup Voom/Glimma S4M module","urgency":"3","importance":"1"},{"id":"2734","name":"Data Portal","urgency":"3","importance":"1"},{"id":"2753","name":"PCA plots integrated","urgency":"3","importance":"2"},{"id":"2753","name":"Report Upload","urgency":"3","importance":"2"},{"id":"2761","name":"YuGene for Jason Ivanusic","urgency":"3","importance":"2"},{"id":"2730","name":"Omicxview UX improvements","urgency":"3","importance":"2"},{"id":"2772","name":"NCMAS application Raijin","urgency":"3","importance":"2"},{"id":"2159","name":"SSL on all servers","urgency":"3","importance":"2"},{"id":"2746","name":"scRNASeq hosting","urgency":"2","importance":"1"},{"id":"2741","name":"Store gene lists in Report","urgency":"2","importance":"1"},{"id":"","name":"Speed up pipelines","urgency":"2","importance":"1"},{"id":"2580","name":"Protein Mapping","urgency":"2","importance":"2"},{"id":"2242","name":"Ensembl Upgrade","urgency":"2","importance":"2"},{"id":"2730","name":"Omicxview with protein/transcriptomic data","urgency":"2","importance":"2"},{"id":"","name":"New species","urgency":"2","importance":"2"},{"id":"","name":"Audit annotation changes","urgency":"2","importance":"2"},{"id":"","name":"Protein vs RNA scatter","urgency":"2","importance":"2"},{"id":"2537","name":"agile_org improvements","urgency":"1","importance":"1"},{"id":"","name":"Redo the UX including wizards","urgency":"1","importance":"1"},{"id":"","name":"Better Group Sharing Jobs, Gene Lists","urgency":"1","importance":"1"},{"id":"","name":"Omnisearch for Metabolites and miRNA","urgency":"1","importance":"1"},{"id":"1220","name":"Pylons to Pyramid","urgency":"1","importance":"2"},{"id":"2613","name":"PHP Validator","urgency":"1","importance":"2"},{"id":"2717","name":"Volcano plots integrated ","urgency":"1","importance":"2"},{"id":"2741","name":"Andras needs","urgency":"1","importance":"2"}]
 </textarea> 
 <div style="clear:both"></div>
+<button id="clear_all">Clear All</button>
 <button id="reset_json">Reset JSON </button>
-<div style="clear:both"></div>
-<textarea id="final_json" style="margin-top: 20px;width:400px;height:200px;float:left;">
-</textarea>
-<div style="clear:both"></div>
 <button id="final_report">Final Report</button>
 <div style="clear:both"></div>
 <input id="new_id" placeholder="id" type="text"></input>
