--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
 <button id="bulk_create_new_lists">Bulk Create New Lists</button>
 <div style="clear:both"></div>
 <textarea id="set_json">
-[{"id":"","name":"NSW RSE F2F","urgency":"3","importance":"2"},{"id":"undefined","name":"QLD RSE F2F (after ResBaz)","urgency":"3","importance":"2"},{"id":"","name":"Chase up SA RSEs....","urgency":"2","importance":"2"},{"id":"undefined","name":"Learn about Astronomy","urgency":"1","importance":"1"},{"id":"","name":"TAS - can't really chase up","urgency":"1","importance":"2"}]
+[{"id":"","name":"Identify on-rampers","urgency":"3","importance":"2"},{"id":"","name":"PMC workshop for data storage","urgency":"3","importance":"2"},{"id":"","name":"Survey / use case form / pre workshop","urgency":"3","importance":"2"},{"id":"","name":"Use cases for MDHS","urgency":"2","importance":"1"},{"id":"","name":"Small HPC users workshop for data storage","urgency":"2","importance":"1"}]
 </textarea> 
 <div style="clear:both"></div>
 <button id="clear_all">Clear All</button>
