Adding claims simply for now

--- a/index.html
+++ b/index.html
@@ -230,6 +230,13 @@
 <button id="clear_all">Clear All</button>
 <button id="reset_json">Reset JSON </button>
 <button id="final_report">Final Report</button>
+<div id="text_for_pci_eval">
+	<ul>
+		<li>Academic-led claim: The Leadership Team of the PCI drives the overall Initiative in ways that align with academic values, expectations and culture</li>
+		<li>Use of Resources claim: The Leadership Team of the PCI utilizes technical, human and academic resources in ways that are value-for-money, sustainable and accountable. </li>
+		<li>Visibility claim: The Leadership Team of the PCI communicates its plans, deliverables and outcomes across a range of stakeholders in ways that ensure visibility, recognition and transferability. </li>
+	</ul>
+</div>
 <div style="clear:both"></div>
 <input id="new_id" placeholder="id" type="text"></input>
 <input id="new_name" placeholder="name" type="text"></input>
