--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>jQuery UI Droppable - Default functionality</title>
   <style>
+    #header {background-color: #094183;}
+    div.dark { color:black;font-family:calibri;}
     body { color:white;font-family:calibri;}
     textarea {width:400px;height:100px;float:left}
     input, button {margin-top: 20px;margin-bottom:20px;}
@@ -67,9 +69,9 @@
                 name= 'Dimension:' + levels[counter_urgent] + ' Domain:' + top_columns[(counter_importance+1)];
                 new_div = '<div data-urgent-important="'+counter_urgent+'::'+(counter_importance+1)+'" id="droppable'+name+'" class="droppable ui-widget-header"> <p>'+name+'</p><ul></ul> </div>';
                 
-                $(document.body).append(new_div);
+                $('#blocks').append(new_div);
             }
-            $(document.body).append('<div style="clear:both"></div>');
+            $('#blocks').append('<div style="clear:both"></div>');
         }
 
 
@@ -213,22 +215,17 @@
   </script>
 </head>
 <body>
-<!-- from https://jqueryui.com/droppable/#default -->
-<textarea id="set_json">
-[{"id":"undefined","name":"Provided visualisations of archetypes for some faculties","urgency":"3","importance":"1"},{"id":"","name":"Synthesised LSCeg needs in one document","urgency":"3","importance":"1"},{"id":"","name":"Organised bibliograph of Definitive Documents similar to papers and citations","urgency":"3","importance":"1"},{"id":"","name":"Asked for strategic plans from ADRs of each faculty","urgency":"3","importance":"1"},{"id":"","name":"Setup Gantt chart for rest of PCI project","urgency":"3","importance":"1"},{"id":"","name":"Faculty Primers","urgency":"3","importance":"1"},{"id":"","name":"Recommended focus on non-STEM faculties","urgency":"3","importance":"1"},{"id":"","name":"Documented sign off processes ","urgency":"3","importance":"1"},{"id":"undefined","name":"Suggested we take into account unconcious bias at recruiting On Rampers","urgency":"3","importance":"1"},{"id":"undefined","name":"Wrote documentation comparing LSCeg priorities to CAV v0.6 document","urgency":"3","importance":"2"},{"id":"","name":"Documented current access options for researchers and highlighted other ways to improve engagement with CoEs","urgency":"3","importance":"2"},{"id":"","name":"Wrote up discussion document on why translators should be targeted first for On Ramp","urgency":"3","importance":"2"},{"id":"","name":"Suggested student internship as a starting point for MCRIP and internal use","urgency":"3","importance":"2"},{"id":"","name":"Petition software for gathering researcher feedback","urgency":"3","importance":"2"},{"id":"","name":"Did review of MCRIP facilities and wrote an internal report","urgency":"3","importance":"2"},{"id":"","name":"Wrote the Senior Academic Convenor's report to the PCI committee which was a status report.","urgency":"3","importance":"3"},{"id":"","name":"Wrote discussion slides around Engagenment","urgency":"3","importance":"3"},{"id":"","name":"Wrote up researcher capabilities document to map service roadmap activities into research language","urgency":"3","importance":"3"},{"id":"","name":"Setup of Expectations document for researcher engagement","urgency":"3","importance":"3"},{"id":"","name":"Helped with suggestions ABACBS BioIT meeting ","urgency":"3","importance":"3"},{"id":"","name":"Highlighted lack of consistency with engagement/ToR of expert groups","urgency":"2","importance":"1"},{"id":"","name":"Highlighted lack of academics on RDM","urgency":"2","importance":"1"},{"id":"","name":"Digitisation at Scale Expert Group","urgency":"2","importance":"1"},{"id":"","name":"Shared access priority document with relevant parties like US EAs","urgency":"2","importance":"2"},{"id":"undefined","name":"Helped US engage with researchers around HPC/Storage review","urgency":"2","importance":"2"},{"id":"","name":"Donna Hensler Short File Archive","urgency":"2","importance":"2"},{"id":"","name":"LIEF workshop data management suggestions","urgency":"2","importance":"2"},{"id":"","name":"Discussed with Jaye Weatherburn Data Steward Co-ordinator","urgency":"2","importance":"2"},{"id":"","name":"Shared synthesis of LSCeg document with LSCeg","urgency":"2","importance":"3"},{"id":"","name":"Met with academics/third spacers who asked about PCI proactively","urgency":"2","importance":"3"},{"id":"undefined","name":"Met with most MCRIP platforms to understand high level data and compute needs","urgency":"2","importance":"3"},{"id":"","name":"Worked on understanding high level research needs for non-STEM faculties like Education, Law, ABP, FBE, Arts and Fine Arts and Music","urgency":"2","importance":"3"},{"id":"","name":"40+ engagements at the meso level across multiple faculties including ABP, FBE, Eng, Sci, MDHS, FVAS and FAM and Peter Mac, MIG and MNC, Portable Pipeline project, Mike Clark","urgency":"2","importance":"3"},{"id":"","name":"Represented UniMelb at eResearch Australasia","urgency":"2","importance":"3"},{"id":"","name":"Represented UniMelb in RSE community","urgency":"2","importance":"3"},{"id":"","name":"Represented UniMelb in FAVeR community","urgency":"2","importance":"3"},{"id":"","name":"Suggested that the PCI Infrastructure and Services meeting be held at RIC / SS","urgency":"2","importance":"3"},{"id":"","name":"Organised a faculty IT sysadmin catchup","urgency":"2","importance":"3"},{"id":"","name":"Organised lunch for software engineers","urgency":"2","importance":"3"},{"id":"undefined","name":"Good feedback from PCI team around visualisation of archetypes","urgency":"1","importance":"1"},{"id":"","name":"Excellent feedback from MCRIP platform manager in helping to bridge gap between them and US in change management situation","urgency":"1","importance":"1"},{"id":"","name":"Flagged issue with budget calculations","urgency":"1","importance":"1"},{"id":"","name":"Good feedback for access priority discussion document from PCI project team and US EAs","urgency":"1","importance":"2"},{"id":"","name":"It was agreed that the first On Rampers should be translators","urgency":"1","importance":"2"},{"id":"","name":"Provided helpful suggestions for Dr Tom Daly around DEM-DEC","urgency":"1","importance":"2"},{"id":"","name":"No major negative feedback of synthesis of LSCeg from the LSCeg","urgency":"1","importance":"3"},{"id":"","name":"Provided suggestions for members of the DRP","urgency":"1","importance":"3"},{"id":"","name":"Linked up multiple researchers with services around the University. eg. Tom Daly and Richard Sinnott","urgency":"1","importance":"3"}]
-</textarea> 
+
+	<div id="header" style="width:auto; height:150px;"><img style="height:150px;float:left;" src="https://brandhub.unimelb.edu.au/guidelines/logos/04_Logo_Vertical-Housed.jpg"> <span style="line-height:150px;font-size:40px;margin-left: 80px;" id="title">PCI Leadership Evaluation</span></div>
 <div style="clear:both"></div>
-<button id="clear_all">Clear All</button>
-<button id="reset_json">Reset JSON </button>
-<button id="final_report">Final Report</button>
-<div style="clear:both"></div>
-<textarea id="bulk_new_lists" placeholder="Put tasks on different lines">
+
+<textarea style="margin-top:40px;" id="bulk_new_lists" placeholder="Put tasks on different lines">
 </textarea>
 <div style="clear:both"></div>
 <button id="bulk_create_new_lists">Bulk Create New Lists</button>
 <div style="clear:both"></div>
 
-<div id="text_for_pci_eval">
+<div id="text_for_pci_eval" class="dark">
 	<ul>
 		<li>Academic-led claim: The Leadership Team of the PCI drives the overall Initiative in ways that align with academic values, expectations and culture</li>
 		<li>Use of Resources claim: The Leadership Team of the PCI utilizes technical, human and academic resources in ways that are value-for-money, sustainable and accountable. </li>
@@ -239,6 +236,21 @@
 
 
 <ul id="ul_for_new_li"></ul>
+<div style="clear:both"></div>
+<div id="blocks"> </div> 
+
+<!-- from https://jqueryui.com/droppable/#default -->
+<div style="clear:both"></div>
+
+<div class="dark"> This is the report in JSON so you can back it up and restore</div>
+
+<textarea id="set_json">
+[{"id":"undefined","name":"Provided visualisations of archetypes for some faculties","urgency":"3","importance":"1"},{"id":"","name":"Synthesised LSCeg needs in one document","urgency":"3","importance":"1"},{"id":"","name":"Organised bibliograph of Definitive Documents similar to papers and citations","urgency":"3","importance":"1"},{"id":"","name":"Asked for strategic plans from ADRs of each faculty","urgency":"3","importance":"1"},{"id":"","name":"Setup Gantt chart for rest of PCI project","urgency":"3","importance":"1"},{"id":"","name":"Faculty Primers","urgency":"3","importance":"1"},{"id":"","name":"Recommended focus on non-STEM faculties","urgency":"3","importance":"1"},{"id":"","name":"Documented sign off processes ","urgency":"3","importance":"1"},{"id":"undefined","name":"Suggested we take into account unconcious bias at recruiting On Rampers","urgency":"3","importance":"1"},{"id":"undefined","name":"Wrote documentation comparing LSCeg priorities to CAV v0.6 document","urgency":"3","importance":"2"},{"id":"","name":"Documented current access options for researchers and highlighted other ways to improve engagement with CoEs","urgency":"3","importance":"2"},{"id":"","name":"Wrote up discussion document on why translators should be targeted first for On Ramp","urgency":"3","importance":"2"},{"id":"","name":"Suggested student internship as a starting point for MCRIP and internal use","urgency":"3","importance":"2"},{"id":"","name":"Petition software for gathering researcher feedback","urgency":"3","importance":"2"},{"id":"","name":"Did review of MCRIP facilities and wrote an internal report","urgency":"3","importance":"2"},{"id":"","name":"Wrote the Senior Academic Convenor's report to the PCI committee which was a status report.","urgency":"3","importance":"3"},{"id":"","name":"Wrote discussion slides around Engagenment","urgency":"3","importance":"3"},{"id":"","name":"Wrote up researcher capabilities document to map service roadmap activities into research language","urgency":"3","importance":"3"},{"id":"","name":"Setup of Expectations document for researcher engagement","urgency":"3","importance":"3"},{"id":"","name":"Helped with suggestions ABACBS BioIT meeting ","urgency":"3","importance":"3"},{"id":"","name":"Highlighted lack of consistency with engagement/ToR of expert groups","urgency":"2","importance":"1"},{"id":"","name":"Highlighted lack of academics on RDM","urgency":"2","importance":"1"},{"id":"","name":"Digitisation at Scale Expert Group","urgency":"2","importance":"1"},{"id":"","name":"Shared access priority document with relevant parties like US EAs","urgency":"2","importance":"2"},{"id":"undefined","name":"Helped US engage with researchers around HPC/Storage review","urgency":"2","importance":"2"},{"id":"","name":"Donna Hensler Short File Archive","urgency":"2","importance":"2"},{"id":"","name":"LIEF workshop data management suggestions","urgency":"2","importance":"2"},{"id":"","name":"Discussed with Jaye Weatherburn Data Steward Co-ordinator","urgency":"2","importance":"2"},{"id":"","name":"Shared synthesis of LSCeg document with LSCeg","urgency":"2","importance":"3"},{"id":"","name":"Met with academics/third spacers who asked about PCI proactively","urgency":"2","importance":"3"},{"id":"undefined","name":"Met with most MCRIP platforms to understand high level data and compute needs","urgency":"2","importance":"3"},{"id":"","name":"Worked on understanding high level research needs for non-STEM faculties like Education, Law, ABP, FBE, Arts and Fine Arts and Music","urgency":"2","importance":"3"},{"id":"","name":"40+ engagements at the meso level across multiple faculties including ABP, FBE, Eng, Sci, MDHS, FVAS and FAM and Peter Mac, MIG and MNC, Portable Pipeline project, Mike Clark","urgency":"2","importance":"3"},{"id":"","name":"Represented UniMelb at eResearch Australasia","urgency":"2","importance":"3"},{"id":"","name":"Represented UniMelb in RSE community","urgency":"2","importance":"3"},{"id":"","name":"Represented UniMelb in FAVeR community","urgency":"2","importance":"3"},{"id":"","name":"Suggested that the PCI Infrastructure and Services meeting be held at RIC / SS","urgency":"2","importance":"3"},{"id":"","name":"Organised a faculty IT sysadmin catchup","urgency":"2","importance":"3"},{"id":"","name":"Organised lunch for software engineers","urgency":"2","importance":"3"},{"id":"undefined","name":"Good feedback from PCI team around visualisation of archetypes","urgency":"1","importance":"1"},{"id":"","name":"Excellent feedback from MCRIP platform manager in helping to bridge gap between them and US in change management situation","urgency":"1","importance":"1"},{"id":"","name":"Flagged issue with budget calculations","urgency":"1","importance":"1"},{"id":"","name":"Good feedback for access priority discussion document from PCI project team and US EAs","urgency":"1","importance":"2"},{"id":"","name":"It was agreed that the first On Rampers should be translators","urgency":"1","importance":"2"},{"id":"","name":"Provided helpful suggestions for Dr Tom Daly around DEM-DEC","urgency":"1","importance":"2"},{"id":"","name":"No major negative feedback of synthesis of LSCeg from the LSCeg","urgency":"1","importance":"3"},{"id":"","name":"Provided suggestions for members of the DRP","urgency":"1","importance":"3"},{"id":"","name":"Linked up multiple researchers with services around the University. eg. Tom Daly and Richard Sinnott","urgency":"1","importance":"3"}]
+</textarea> 
+<div style="clear:both"></div>
+<button id="clear_all">Clear All</button>
+<button id="reset_json">Reset JSON </button>
+<button id="final_report">Final Report</button>
 <div style="clear:both"></div>
  
 </body>
