Adding rounded edges for blue blocks

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     textarea {width:400px;height:100px;float:left}
     input, button {margin-top: 20px;margin-bottom:20px;}
     .draggable { width: 350px;  padding: 0.1em; font-size: 12px;  background-color: #5e93b3;}
-    .droppable { width: 450px; height: 350px; padding: 0.5em; float: left; margin: 10px; background-color:#094183;}
+    .droppable { border-radius: 4px; width: 450px; height: 350px; padding: 0.5em; float: left; margin: 10px; background-color:#094183;}
   </style>
   <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
   <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
