Updating header claims as per AT email

--- a/index_workforce.html
+++ b/index_workforce.html
@@ -227,9 +227,9 @@
 
 <div id="text_for_pci_eval" class="dark">
 	<ul>
-		<li>Valued Service claim: Research Data Specialists provide advice, support and development to researchers that is valued.</li>
-		<li>Communities of Practice claim: Research Data Specialists help to strengthen communities of practice through active collaboration, networking and membership across all research areas.</li>
-		<li>Visibility claim: Research Data Specialists use their wide engagement networks to enhance leadership and visibility of data intensive research. </li>
+		<li>Research, Support and development claim: Research Data Specialists provide advice, support and development to researchers that is valued.</li>
+		<li>Transdisciplinary Community Building claim: Research Data Specialists help to strengthen communities of practice through active collaboration, networking and membership across all research areas.</li>
+		<li>Leadership and Service claim: Research Data Specialists use their wide engagement networks to enhance leadership and visibility of data intensive research. </li>
 	</ul>
 </div>
 <div style="clear:both"></div>
