Updating header claims as per AT email

--- a/index_workforce.html
+++ b/index_workforce.html
@@ -59,9 +59,9 @@
 
         top_columns = new Array(); 
 	top_columns[0] = 'Undefined'; 
-	top_columns[1] = 'Valued Service'; 
-	top_columns[2] = 'Communities of Practice'; 
-	top_columns[3] = 'Visibility'; 
+	top_columns[1] = 'Research, Support and development'; 
+	top_columns[2] = 'Transdisciplinary Community Building'; 
+	top_columns[3] = 'Leadership and Service'; 
 
 
         for (var counter_urgent = urgent_levels, len = 0; counter_urgent > len; counter_urgent--) {
