--- a/index_workforce.html
+++ b/index_workforce.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>jQuery UI Droppable - Default functionality</title>
+  <title>PCI Workforce Evaluation</title>
   <style>
     #header {background-color: #094183;}
     div.dark { color:black;font-family:calibri;}
